--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=0.1-alpha
+mod_version=1.0
 
 minecraft_version=1.16.5
 forge_version=36.2.34
