--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,9 +7,9 @@ issueTrackerURL="https://github.com/DawnOfTimeMC/armoroftheages/issues/"
     modId="armoroftheages"
     version="${file.jarVersion}"
     displayName="Armor of the Ages"
-    displayURL="https://www.curseforge.com/minecraft/mc-mods/dawn-of-time"
+    displayURL="https://www.curseforge.com/minecraft/mc-mods/armor-of-the-ages"
     logoFile="logo.png"
-    credits="Mr_ch0c0late"
+    credits="Mr_ch0c0late, Hahdrim"
     authors="Poulpinou & TheGoldenWorld"
     description='''
     This mod adds many armor and weapons from different cultures.
